--- a/.gitignore
+++ b/.gitignore
@@ -29,7 +29,7 @@ build/Release
 # Dependency directories
 node_modules
 jspm_packages
-client/lib/
+client/lib/bower_components
 
 # Optional npm cache directory
 .npm
